--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -46,5 +46,8 @@ jobs:
         uses: docker://github/super-linter:v2.2.0
         env:
           VALIDATE_ALL_CODEBASE: false
-          VALIDATE_ANSIBLE: false
+          VALIDATE_GO: true
+          VALIDATE_DOCKER: true
+          VALIDATE_ANSIBLE: true
+          VALIDATE_MD: true
 ...
