ACTIONS: adding linter

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -4,7 +4,7 @@
 ## Linter GitHub Actions ##
 ###########################
 ###########################
-name: Lint Code Base
+name: Supper Linter
 
 #
 # Documentation:
@@ -14,10 +14,10 @@ name: Lint Code Base
 #############################
 # Start the job on all push #
 #############################
-on:
-  push:
-    branches-ignore:
-      - 'master'
+on: push
+#  push:
+#    branches-ignore:
+#      - 'master'
 
 ###############
 # Set the Job #
